# lambdas-roa

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  conftest.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  samconfig.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  test.yml
docs/devlog/: 2026-04-13.md
docs/superpowers/specs/: 2026-04-16-agent1-shared-layer-and-fhir-processor.md  2026-04-16-agent2-handlers-and-infra-hardening.md  2026-04-16-roa-lambdas-shared-context.md
events/: dlq-alerter-sqs.json  fhir-processor-sqs.json  payer-health-check-scheduled.json  token-refresh-scheduled.json
functions/cold_storage_mover/: handler.py
functions/dlq_alerter/: handler.py
functions/dlq_alerter/tests/: conftest.py  test_handler.py
functions/fhir_processor/: eob_parser.py  fhir_client.py  handler.py  nppes_resolver.py
functions/fhir_processor/tests/: conftest.py  test_eob_parser.py  test_fhir_client.py  test_handler.py  test_nppes_resolver.py
functions/fhir_processor/tests/fixtures/: bundle_page.json  carrier_eob.json  inpatient_eob.json  pde_eob.json
functions/payer_health_check/: handler.py
functions/payer_health_check/tests/: conftest.py  test_handler.py
functions/token_refresh/: handler.py
functions/token_refresh/tests/: conftest.py  test_handler.py
infra/: cold-storage-mover.yaml  dlq-alerter.yaml  fhir-processor.yaml  payer-health-check.yaml  shared-layer.yaml  template.yaml  token-refresh.yaml
infra/parameters/: dev.json  prod.json  staging.json
scripts/: build-layer.sh  check-schema-drift.py  e2e-dev.sh  generate-cross-lang-fixture.ts  invoke-local.sh  schema.sql  seed-test-db.sh  smoke-test.sh
shared/: audit.py  db.py  encryption.py  logging.py  payer_registry.py  requirements.txt  secrets.py
shared/tests/: conftest.py  test_db.py  test_encryption.py  test_logging.py  test_payer_registry.py  test_secrets.py
shared/tests/fixtures/: ts_encrypted_meta.json
