[project]
name = "roa-lambdas"
version = "0.0.1"
requires-python = ">=3.12,<3.13"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["moto.*", "responses.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["shared/tests", "functions"]
python_files = "test_*.py"
addopts = "-ra --import-mode=importlib"
